[project]
name = "musictagging"
version = "0.1"
description = "tag some music lol"

authors = [
  {name = "Martina Brubaker", email = "mbrubaker1124@stevenscollege.edu"},
]

dependencies = [
  'eyeD3',
  'click',
]

[project.scripts]
tagfile = "music.tag:command"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["music"]
